# peridot

./: .bazelignore  .bazelrc  .editorconfig  .envrc  .envrc.prod.extarches  .envrc.prod.ghcr  .envrc.prod.mustafarocky  .envrc.prod.quaymirror  .envrc.prod.resf  .gitignore  .gitlab-ci.yml  .prettierrc  BUILD.bazel  CONTRIBUTORS  COPYRIGHT  LICENSE  OWNERS  OWNERS_ALIASES  README.md  WORKSPACE  go.mod  go.sum  nogo.json  package.json  peridot.code-workspace  repositories.bzl  tsconfig.json
.ijwb/: .bazelproject
apollo/: BUILD.bazel  README.md  seed.sql  test-dummy.sh
apollo/cmd/apollo/: BUILD.bazel  main.go
apollo/cmd/apollo/ci/: BUILD.bazel  Chart.yaml  deploy.jsonnet
apollo/cmd/apollostarter/: BUILD.bazel  main.go
apollo/cmd/apollostarter/ci/: BUILD.bazel  Chart.yaml  deploy.jsonnet  values.yaml
apollo/cmd/apolloworker/: BUILD.bazel  main.go
apollo/cmd/apolloworker/ci/: BUILD.bazel  Chart.yaml  deploy.jsonnet
apollo/db/: BUILD.bazel  convert.go  db.go
apollo/db/connector/: BUILD.bazel  connector.go
apollo/db/mock/: BUILD.bazel  mock.go
apollo/db/psql/: BUILD.bazel  psql.go
apollo/rherrata/: BUILD.bazel  api.go  compact_errata.go  errata.go  errata_test.go
apollo/ui/: BUILD.bazel  deploy.jsonnet
apollo/ui/server/: index.mjs
apollo/ui/src/: api.ts  entrypoint.tsx  enumToText.tsx  styles.ts  theme.ts
apollo/ui/src/components/: Overview.tsx  Root.tsx  ShowErrata.tsx
apollo/worker/: BUILD.bazel  worker.go
apollo/workflow/: BUILD.bazel  autocreate_advisory.go  autocreate_advisory_test.go  collect_cve_data.go  downstream_check.go  downstream_check_test.go  poll_mirror_cve.go  poll_mirror_cve_test.go  poll_mirror_errata.go  poll_mirror_errata_test.go  update_cve_state.go  update_cve_state_test.go  workflow.go  workflow_test.go
apollo/workflow/testdata/: CVE-2021-3602.json  RHBA-2021-2593.html  RHSA-2021-2595.html  RHSA-2022-1642.html
bases/: defs.bzl
ci/: BUILD  bazel.jsonnet  bycdeploy.jsonnet  db.jsonnet  frontend.jsonnet  google.jsonnet  kubernetes.jsonnet  mappings.jsonnet  ports.jsonnet  resf_service_mappings.jsonnet  resfdeploy.jsonnet  s3.jsonnet  service_mappings.jsonnet  temporal.jsonnet  utils.jsonnet
docs/: yumrepofs.md
dotui/: Alert.tsx  BUILD  Card.tsx  H1.tsx  H2.tsx  H3.tsx  H4.tsx  H5.tsx  Navbar.tsx  PageWrapper.tsx  RippleLoading.tsx  Table.tsx  TextField.tsx  index.ts  intent.ts
hack/: bazel_setup.sh  br  build_all_frontends.sh  build_impacted_frontend.sh  deploy_dev_registry  deploy_impacted.sh  deploy_peridot  frontend_build.sh  generate  get_arch  get_impacted_targets.sh  get_openapi_generator.sh  gofmt_check.sh  govendor  k8s_dev_pf  new_migration  non_manual_build.sh  openapi-gen  push_peridot  recreate_with_seed  run_ci  setup_base_internal_services  setup_dev_temporal  setup_external_dev_services  setup_k8s_dev_env  switchbp  unit_tests.sh
infrastructure/: istio.operator.yaml
initdb/: BUILD.bazel  main.go
koji/: BUILD.bazel  base.go  build.go  get_package.go  koji.go  list_builds.go  list_rpms.go  list_tagged.go  mock.go
modulemd/: BUILD.bazel  modulemd.go  v3.go
nofussvendor/: BUILD  main.go
obsidian/: README.md
patches/: 0001-Disable-ppc64-support-in-rules_go-as-it-breaks-match.patch  0001-Key-ID-subpacket-should-not-be-hashed-or-critical-fo.patch  BUILD.bazel
peridot/: README.md  seed.sql
peridot/composetools/: BUILD.bazel  arch.go  rpm.go
peridot/db/: BUILD.bazel  db.go
peridot/db/connector/: BUILD.bazel  connector.go
peridot/db/models/: BUILD.bazel  build.go  import.go  key.go  package.go  plugin.go  project.go  repository.go  task.go
peridot/db/psql/: BUILD.bazel  build.go  import.go  key.go  log.go  package.go  plugin.go  project.go  psql.go  repository.go  task.go
peridot/rpmbuild/: BUILD.bazel  common.go  rpmbuild.go
peridot/yummeta/: BUILD.bazel  filelists.go  other.go  primary.go  repomd.go  updateinfo.go
proto/: BUILD.bazel  common.proto  healthcheck.proto
publisher/: README.md
rules_byc/: defs.bzl
rules_raw_ts_library/: BUILD  index.bzl
rules_resf/: BUILD  defs.bzl
secparse/: README.md  seed.sql
secparse/cron/: BUILD.bazel  autocreate_advisory.go  cron.go  cve_resolved_downstream.go  cve_resolved_downstream_test.go  main_test.go  poll_redhat_for_cves.go  poll_redhat_for_cves_test.go  scan_redhat_errata.go  scan_redhat_errata_test.go  update_cve_state.go  update_cve_state_test.go
secparse/cron/testdata/: RHBA-2021-2593.html  RHSA-2021-2595.html
secparse/db/: BUILD.bazel  convert.go  db.go
secparse/db/connector/: BUILD.bazel  connector.go
secparse/db/mock/: BUILD  mock.go
secparse/db/psql/: BUILD.bazel  psql.go
secparse/impl/: BUILD.bazel  advisory.go  server.go
secparse/rherrata/: BUILD.bazel  api.go  compact_errata.go  errata.go  errata_test.go  mock.go
secparse/rherrata/testdata/: RHBA-2021-2759.html  RHSA-2021-2743.html
secparse/rhsecurity/: BUILD.bazel  README.md  Red-Hat-Security-Data-API.yaml  api_default.go  client.go  configuration.go  model_cve.go  model_cve_detailed.go  model_cve_detailed_affected_release.go  model_cve_detailed_bugzilla.go  model_cve_detailed_cvss3.go  model_cve_detailed_package_state.go  utils.go
secparse/rhsecurity/docs/: CVE.md  CVEDetailed.md  CVEDetailedAffectedRelease.md  CVEDetailedCvss3.md  DefaultApi.md
secparse/ui/: BUILD.bazel
secparse/ui/server/: index.mjs
secparse/ui/src/: api.ts  entrypoint.tsx  styles.ts
secparse/ui/src/admin/components/: AdminSection.tsx
secparse/ui/src/components/: Overview.tsx  Root.tsx  ShowErrata.tsx
servicecatalog/: BUILD.bazel  common.go  hydra.go  keykeeper.go  spicedb.go  yumrepofs.go
spicedb/deploy/: BUILD.bazel  Dockerfile  common.jsonnet  deploy.jsonnet  schema.zed
tailwind/: BUILD  tailwind.css
temporalutils/: BUILD.bazel  client.go
tools/: status.sh
utils/: BUILD.bazel  aws.go  db.go  env.go  errors.go  flags.go  grpc.go  health.go  interceptors.go  pointer.go  progress.go  slice.go  sqlx.go
wrksp/: atlassian_deps.bzl  atlassian_download.bzl  docker_deps.bzl  docker_download.bzl  openapitools_deps.bzl  openapitools_download.bzl  python_deps.bzl  (+1 more)
(+529 files in other folders)
