load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "modulemd",
    srcs = [
        "modulemd.go",
        "v3.go",
    ],
    importpath = "peridot.resf.org/modulemd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-git/go-billy/v5:go-billy",
        "//vendor/gopkg.in/yaml.v3:yaml_v3",
    ],
)
