load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "commonpb_proto",
    srcs = [
        "common.proto",
        "healthcheck.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "commonpb_go_proto",
    compilers = [
        "//:go_apiv2",
        "//:go_grpc",
        "//:go_validate",
        "//:go_gen_grpc_gateway",
    ],
    importpath = "peridot.resf.org/common",
    proto = ":commonpb_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto_googleapis_api//annotations"],
)

go_library(
    name = "common",
    embed = [":commonpb_go_proto"],
    importpath = "peridot.resf.org/common",
    visibility = ["//visibility:public"],
)
