load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "temporalutils",
    srcs = ["client.go"],
    importpath = "peridot.resf.org/temporalutils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/sirupsen/logrus",
        "//vendor/github.com/spf13/pflag",
        "//vendor/github.com/spf13/viper",
        "//vendor/go.temporal.io/api/workflowservice/v1:workflowservice",
        "//vendor/go.temporal.io/sdk/client",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
    ],
)
