load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "aws.go",
        "db.go",
        "env.go",
        "errors.go",
        "flags.go",
        "grpc.go",
        "health.go",
        "interceptors.go",
        "pointer.go",
        "progress.go",
        "slice.go",
        "sqlx.go",
    ],
    importpath = "peridot.resf.org/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common",
        "//servicecatalog",
        "//vendor/github.com/aws/aws-sdk-go/aws",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials",
        "//vendor/github.com/aws/aws-sdk-go/aws/session",
        "//vendor/github.com/fatih/color",
        "//vendor/github.com/go-chi/chi",
        "//vendor/github.com/go-chi/chi/middleware",
        "//vendor/github.com/go-openapi/runtime",
        "//vendor/github.com/go-openapi/strfmt",
        "//vendor/github.com/grpc-ecosystem/go-grpc-middleware",
        "//vendor/github.com/grpc-ecosystem/go-grpc-prometheus",
        "//vendor/github.com/jmoiron/sqlx",
        "//vendor/github.com/lib/pq",
        "//vendor/github.com/ory/hydra-client-go/client",
        "//vendor/github.com/ory/hydra-client-go/client/admin",
        "//vendor/github.com/ory/hydra-client-go/client/public",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp",
        "//vendor/github.com/sirupsen/logrus",
        "//vendor/github.com/spf13/pflag",
        "//vendor/github.com/spf13/viper",
        "//vendor/github.com/vbauerster/mpb/v7:mpb",
        "//vendor/github.com/vbauerster/mpb/v7/decor",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
    ],
)
