load("//rules_resf:defs.bzl", "RESFDEPLOY_OUTS_BASE", "container", "peridot_k8s", "resf_frontend")

package(default_visibility = ["//visibility:public"])

server_deps = ["//common/frontend_server"]

server_entrypoint = "server/index.mjs"

server_srcs = glob(["server/**/*.mjs"])

resf_frontend(
    name = "apollo",
    srcs = glob([
        "src/**/*.tsx",
        "src/**/*.ts",
    ]),
    entrypoint = "apollo/ui/src/entrypoint.tsx",
    index_html = "//rules_resf/internal/resf_bundle:index_no_mobile.hbs",
    server_deps = server_deps,
    server_entrypoint = server_entrypoint,
    server_srcs = server_srcs,
    tailwind_config = "//rules_resf/internal/resf_bundle:tailwind.config.nopreflight.js",
    title = "Rocky Enterprise Software Foundation Product Errata",
    deps = [
        "//apollo/proto/v1:client_typescript",
        "//common/mui",
        "//common/ui",
        "//tailwind:css",
        "@npm//@chakra-ui/react",
        "@npm//@chakra-ui/icons",
        "@npm//@emotion/unitless",
        "@npm//framer-motion",
        "@npm//framesync",
        "@npm//popmotion",
        "@npm//style-value-types",
        "@npm//await-to-js",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-router",
        "@npm//react-router-dom",
    ],
)

container(
    base = "//bases/bazel/node",
    files = [
        ":apollo.bundle",
    ],
    frontend = True,
    image_name = "apollo-frontend",
    server_entrypoint = server_entrypoint,
    server_files = server_srcs + server_deps,
)

peridot_k8s(
    name = "apollo-frontend",
    src = "deploy.jsonnet",
    outs = RESFDEPLOY_OUTS_BASE,
    deps = ["//ci"],
)
