load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = ["worker.go"],
    importpath = "peridot.resf.org/apollo/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//apollo/db",
        "//apollo/workflow",
        "//vendor/github.com/sirupsen/logrus",
        "//vendor/go.temporal.io/sdk/client",
        "//vendor/go.temporal.io/sdk/worker",
    ],
)
