load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "convert.go",
        "db.go",
    ],
    importpath = "peridot.resf.org/secparse/db",
    visibility = ["//visibility:public"],
    deps = [
        "//secparse/admin/proto/v1:proto",
        "//secparse/proto/v1:proto",
        "//secparse/rpmutils",
        "//utils",
        "//vendor/github.com/lib/pq",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
    ],
)
