load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "impl",
    srcs = [
        "advisory.go",
        "server.go",
    ],
    importpath = "peridot.resf.org/secparse/impl",
    visibility = ["//visibility:public"],
    deps = [
        "//secparse/db",
        "//secparse/proto/v1:proto",
        "//secparse/rpmutils",
        "//utils",
        "//vendor/github.com/sirupsen/logrus",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
