package(default_visibility = ["//visibility:public"])

load("//rules_byc:defs.bzl", "byc_frontend", "container")

server_deps = ["//common/frontend_server"]

server_entrypoint = "server/index.mjs"

server_srcs = glob(["server/**/*.mjs"])

byc_frontend(
    name = "secparse",
    srcs = glob([
        "src/**/*.tsx",
        "src/**/*.ts",
    ]),
    entrypoint = "secparse/ui/src/entrypoint.tsx",
    index_html = "//rules_byc/internal/byc_bundle:index_no_mobile.hbs",
    server_deps = server_deps,
    server_entrypoint = server_entrypoint,
    server_srcs = server_srcs,
    title = "Rocky Linux Product Errata",
    deps = [
        "//common/ui",
        "//secparse/proto/v1:client_typescript",
        "//tailwind:css",
        "@npm//@mui/icons-material",
        "@npm//@mui/material",
        "@npm//@mui/styles",
        "@npm//@mui/x-data-grid",
        "@npm//await-to-js",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-router",
        "@npm//react-router-dom",
    ],
)

container(
    base = "//bases/bazel/node",
    files = [
        ":secparse.bundle",
    ],
    frontend = True,
    image_name = "secparse-frontend",
    server_entrypoint = server_entrypoint,
    server_files = server_srcs + server_deps,
)
