load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "connector",
    srcs = ["connector.go"],
    importpath = "peridot.resf.org/apollo/db/connector",
    visibility = ["//visibility:public"],
    deps = [
        "//apollo/db",
        "//apollo/db/psql",
        "//utils",
        "//vendor/github.com/sirupsen/logrus",
    ],
)
