load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["mock.go"],
    importpath = "peridot.resf.org/apollo/db/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//apollo/db",
        "//apollo/proto/v1:pb",
        "//utils",
        "//vendor/github.com/jmoiron/sqlx/types",
    ],
)
