load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "psql",
    srcs = ["psql.go"],
    importpath = "peridot.resf.org/apollo/db/psql",
    visibility = ["//visibility:public"],
    deps = [
        "//apollo/db",
        "//apollo/proto/v1:pb",
        "//utils",
        "//vendor/github.com/jmoiron/sqlx",
        "//vendor/github.com/jmoiron/sqlx/types",
    ],
)
